Fix tabs overflowing when viewport is small (#48193)

--- a/packages/js/product-editor/src/components/tabs/style.scss
+++ b/packages/js/product-editor/src/components/tabs/style.scss
@@ -1,6 +1,9 @@
 .woocommerce-product-tabs {
     display: flex;
-    justify-content: center;
+    justify-content: safe center;
+	@media only screen and (max-width: 500px) {
+		overflow: auto;
+	}
 
     .components-button {
         padding: $gap-smaller 0 20px 0;
@@ -9,6 +12,10 @@
         border-bottom: 3.5px solid transparent;
         border-radius: 0;
         height: auto;
+
+		@media only screen and (max-width: 500px) {
+			margin-top: 2px;
+		}
 
         &.is-selected {
             border-color: var(--wp-admin-theme-color);
